# gaticos

./: .gitignore  .pylintrc  README.md  ci.sh  pyproject.toml  setup.py
gaticos/: main.py
gaticos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py
