[tool.poetry]
name = "gaticos"
version = "0.5.1"
readme = "README.md"
description = "Librería de ejemplo"
authors = ["avara1986 <a.vara.1986@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
gaticos = 'gaticos.main:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
build = "^0.7.0"
mypy = "^0.910"
pytest-cov = "^3.0.0"
black = "^21.9b0"
isort = "^5.9.3"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

# [tool.mypy]
# ignore_missing_imports = false